# milf

./: .env.example  .gitignore  README.md  pubspec.yaml
CentralServer/internal/utils/: logger.go
Client/: package-lock.json
Client/src/: App.tsx
Client/src/components/layout/: AppLayout.tsx
Client/src/contexts/: AuthContext.tsx
Client/src/hooks/: useQueries.ts
Client/src/pages/: Dashboard.tsx  FunctionDetail.tsx  Invocations.tsx  Login.tsx  Logs.tsx
android/app/src/main/kotlin/com/example/consumer/: MainActivity.kt
android/app/src/main/kotlin/com/example/consumer/features/orchestrator/: FlutterBridge.kt
android/app/src/main/kotlin/com/example/consumer/features/os_stats/: OsReader.kt
android/app/src/main/kotlin/com/example/consumer/features/process_manager/: SlotManager.kt
android/app/src/main/kotlin/com/example/consumer/features/wasm_runtime/: WasmEngine.kt
consumer/: README.md  build_log.txt  create_wasm.py  generate_large_wasm.py  generate_wasm.py  simple.wasm
consumer/android/app/: build.gradle.kts
consumer/android/app/src/main/: AndroidManifest.xml
consumer/android/app/src/main/aidl/com/example/consumer/: IWasmWorker.aidl
consumer/android/app/src/main/cpp/: CMakeLists.txt  wamr_bridge.cpp
consumer/android/app/src/main/kotlin/com/example/consumer/: MainActivity.kt
consumer/android/app/src/main/kotlin/com/example/consumer/features/execution/: WasmJNI.kt  WasmService.kt
consumer/android/app/src/main/kotlin/com/example/consumer/features/orchestrator/: FlutterBridge.kt  IsolatedWorkerManager.kt
consumer/docs/: KNOWN_ISSUES.md  executive_summary.md  google_docs_draft.md  kotlin_architecture.md  system_overview.md  walkthrough.md
consumer/lib/: main.dart
consumer/lib/modules/native_bridge/resources/: platform_channel.dart
lib/: main.dart
lib/config/: env.dart  service_locator.dart
lib/modules/cloud_connect/services/: cloud_service.dart
lib/modules/native_bridge/resources/: platform_channel.dart
test/: widget_test.dart
